--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
     "name": "jekyll-hook",
     "description": "A server that listens for GitHub webhook posts and renders a Jekyll site",
-    "author": "dhcole",
-    "version": "0.0.1",
+    "homepage": "http://github.com/developmentseed/jekyll-hook",
+    "author": {
+        "name": "Development Seed",
+        "url": "http://developmentseed.org/",
+        "email": "info@developmentseed.org"
+    },
+    "contributors": [
+        "Dave Cole <dave@developmentseed.org>"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/developmentseed/jekyll-hook.git"
+    },
+    "version": "0.1.0",
     "dependencies": {
         "express": "3.x",
         "queue-async": "1.0.1",
