--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "version": "0.1.0",
     "dependencies": {
         "express": "3.x",
-        "emailjs": "0.3.4"
+        "emailjs": "0.3.4",
+        "queue-async": "1.0.x"
     },
     "private": true
 }
