Add the ability to validate the X-Hub-Signature header

--- a/config.sample.json
+++ b/config.sample.json
@@ -5,6 +5,7 @@
         "build": "./scripts/build.sh",
         "publish": "./scripts/publish.sh"
     },
+    "secret": "",
     "email": {
         "user": "", 
         "password": "", 
