If the repo is private, ssh key is needed, if it's public a simple https request is enough

--- a/config.sample.json
+++ b/config.sample.json
@@ -1,18 +1,18 @@
 {
     "gh_server": "github.com",
     "temp": "/home/ubuntu/jekyll-hook",
+    "public-repo": True,
     "scripts": {
         "build": "./scripts/build.sh",
         "publish": "./scripts/publish.sh"
     },
     "email": {
-        "user": "", 
-        "password": "", 
-        "host": "", 
+        "user": "",
+        "password": "",
+        "host": "",
         "ssl": true
     },
     "accounts": [
         "developmentseed",
-        "mapbox"
     ]
 }
