Added an activate key for the email in config and code

--- a/config.sample.json
+++ b/config.sample.json
@@ -1,12 +1,13 @@
 {
     "gh_server": "github.com",
     "temp": "/home/ubuntu/jekyll-hook",
-    "public-repo": True,
+    "public-repo": true,
     "scripts": {
         "build": "./scripts/build.sh",
         "publish": "./scripts/publish.sh"
     },
     "email": {
+        "isActivated": false,
         "user": "",
         "password": "",
         "host": "",
