--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "emailjs": "^0.3.4",
     "fs-extra": "^0.16.3",
     "githubhook": "^1.1.3",
+    "node-env-file": "^0.1.5",
+    "node-env-flag": "^0.1.0",
     "queue-async": "^1.0.x",
     "s3": "^4.3.1",
     "underscore": "^1.7.0"
